@@ -12,6 +12,10 @@ CHANGES
   environment by setting it to ``None`` when ``Browser.handleErrors`` is
   ``True``.  This makes it easier to test error pages.
 
+- More friendly error message from getControl() et al when you specify
+  an index that is out of bounds.
+
+
 4.0.2 (2011-05-25)
 ------------------
 
